# cpp-game-engine-book

./: .code.yml  .gitattributes  .gitignore  Introduction.md  LANGS.md  README.md  README_IEG_OPEN_SOURCE.md  README_OA.md  SUMMARY.md  SUMMARY_EN.md  book.json  gitbook_serve.bat  km_head.md
files/: chapter.xmind  cover.psd
samples/audio/audio_source_3d/: CMakeLists.txt
samples/audio/audio_source_3d/example/: login_scene.cpp  login_scene.h  main.cpp
samples/audio/audio_source_3d/source/audio/: audio.cpp  audio.h  audio_clip.cpp  audio_clip.h  audio_listener.cpp  audio_source.cpp
samples/audio/audio_source_3d/source/component/: component.cpp  game_object.cpp  game_object.h
samples/audio/audio_source_3d/source/data_structs/: tree.cpp
samples/audio/audio_source_3d/source/renderer/: font.cpp  font.h  shader.cpp
samples/audio/audio_source_3d/source/utils/: application.cpp
samples/audio/fmod_play_2d_audio/: CMakeLists.txt  CMakeLists.txt.fmod
samples/audio/fmod_play_2d_audio/example/: login_scene.cpp  login_scene.h
samples/audio/fmod_play_2d_audio/source/audio/: audio.cpp  audio.h
samples/audio/fmod_play_2d_audio/source/component/: component.cpp  component.h  game_object.h
samples/audio/fmod_play_2d_audio/source/control/: key_code.h
samples/audio/fmod_play_2d_audio/source/renderer/: camera.h  mesh_renderer.cpp  pass.cpp  technique.cpp  texture2d.cpp  texture2d.h
samples/audio/fmod_play_2d_audio/source/utils/: application.cpp  application.h  screen.cpp
samples/audio/load_bank/: CMakeLists.txt  CMakeLists.txt.fmod
samples/audio/load_bank/example/: login_scene.cpp  login_scene.h  main.cpp
samples/audio/load_bank/source/component/: game_object.cpp
samples/audio/load_bank/source/control/: input.cpp
samples/audio/load_bank/source/renderer/: camera.h  mesh_renderer.cpp  shader.cpp  texture2d.cpp
samples/audio/load_bank/source/utils/: application.cpp  application.h  debug.cpp  debug.h
samples/audio_wwise/integrate_wwise/: CMakeLists.txt  CMakeLists.txt.Wwise
samples/audio_wwise/integrate_wwise/example/: game_scene.lua  login_scene.lua
samples/audio_wwise/integrate_wwise/source/audio/: audio.cpp
samples/audio_wwise/integrate_wwise/source/lua_binding/: lua_binding.cpp
samples/audio_wwise/integrate_wwise/source/render_device/: render_device.h
samples/audio_wwise/integrate_wwise/source/renderer/: mesh_renderer.h
samples/audio_wwise/integrate_wwise/source/ui/: ui_image.cpp
samples/component/test_rttr/: CMakeLists.txt  main.cpp
samples/draw_font/draw_ttf_font_freetype/: CMakeLists.txt  CMakeLists.txt.FreeType
samples/draw_font/draw_ttf_font_freetype/example/: login_scene.cpp  login_scene.h
samples/draw_font/draw_ttf_font_freetype/source/component/: game_object.cpp
samples/draw_font/draw_ttf_font_freetype/source/renderer/: camera.cpp  font.cpp  font.h  material.cpp  mesh_filter.h  mesh_renderer.cpp  mesh_renderer.h  pass.cpp  shader.cpp  texture2d.cpp  texture2d.h
samples/draw_font/draw_ttf_font_freetype/source/utils/: application.cpp  application.h
samples/draw_polygon/draw_cube/untitled/: CMakeLists.txt  ShaderSource.h  VertexData.h  main.cpp
samples/draw_polygon/draw_triangle_vao/: CMakeLists.txt  ShaderSource.h  main.cpp
samples/draw_triangle/untitled/: CMakeLists.txt  main.cpp
samples/draw_triangle/untitled/glfw-3.3.3.bin.WIN64/: README.md
samples/engine_editor/opengl_in_qt/: CMakeLists.txt  CMakeLists.txt.glad  glwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  texture2d.cpp  texture2d.h  vertex_data.h
samples/glfw_empty_window/empty_glfw_src/: CMakeLists.txt  CMakeLists.txt.glfw  main.cpp
samples/glfw_empty_window/untitled/: CMakeLists.txt  main.cpp
samples/gui/camera_orth/: CMakeLists.txt
samples/gui/camera_orth/example/: login_scene.cpp  login_scene.h
samples/integrate_lua/integrate_lua/lua_call_cpp_luabridge_component/: CMakeLists.txt  a.lua  game_object.h  login_scene.lua  main.cpp
samples/integrate_lua/integrate_lua/lua_call_cpp_sol2/: CMakeLists.txt  a.lua  main.cpp
samples/integrate_lua/integrate_lua/lua_call_cpp_sol2_component/: CMakeLists.txt
samples/integrate_lua/lua_debuger/: CMakeLists.txt
samples/integrate_lua/lua_debuger/example/: login_scene.lua  main.cpp  main.lua
samples/integrate_lua/lua_debuger/source/: camera.h  component.cpp  component.h  game_object.cpp  game_object.h  key_action.h  ui_camera.cpp
samples/integrate_lua/lua_debuger/source_lua/: animator.lua  camera.lua  component.lua
samples/load_fbx/extra_skeleton_animation/: CMakeLists.txt
samples/load_fbx/extra_skeleton_animation/example/: engine.h  main.cpp
samples/load_fbx/extra_skinned_mesh/: CMakeLists.txt
samples/load_fbx/extra_skinned_mesh/example/: engine.h  main.cpp
samples/load_fbx/load_skinned_mesh/: CMakeLists.txt
samples/load_fbx/load_skinned_mesh/example/: bak.lua  login_scene.lua
samples/mesh_and_material/mesh_renderer/: CMakeLists.txt  main.cpp
samples/mesh_and_material/mesh_renderer/source/: main.cpp
samples/mesh_and_material/shader_pass/: CMakeLists.txt
samples/mesh_and_material/shader_pass/source/: main.cpp
samples/mesh_and_material/use_shader_file/: CMakeLists.txt  main.cpp  texture2d.h
samples/mesh_and_material/use_shader_file/renderer/: mesh_filter.cpp  shader.cpp  shader.h
samples/physx/physx_ccd/: CMakeLists.txt  CMakeLists.txt.Physx
samples/physx/physx_ccd/example/: main.cpp  simulation_event_callback.h  trigger_filter_callback.h
samples/skeleton_animation/load_skeleton_animation/: CMakeLists.txt  CMakeLists.txt.fmod
samples/skeleton_animation/load_skeleton_animation/example/: login_scene.lua  main.cpp  main.lua
samples/texture/draw_cube_texture/: CMakeLists.txt  main.cpp  texture2d.cpp  texture2d.h
samples/texture/draw_cube_texture_compress/: CMakeLists.txt  main.cpp  texture2d.cpp  texture2d.h  vertex_data.h
samples/video/h264_yuv420_rgb/: CMakeLists.txt  main.cpp
samples/video/h264_yuv420_rgb/.notes/: .linenoteplus
samples/video/jpg_Motion-JPEG/: CMakeLists.txt  main.cpp
samples/video/jpg_yuv444_yuv420_h264_opt/: CMakeLists.txt  texture2d.cpp
(+3312 files in other folders)
